2012-01-25:
 - Hopefully fixes "marker not closed" exception

2012-01-21:
 - Lexer fixes
 - Parser fixes
 - Fixed exception in BashSearchScopes.moduleSearchScope
 - Improved here-doc parsing
 - Fixed parsing of string and subexpressions in arithmetic expressions
 - Fixed parsing of [ ] conditional expression
 - Enabled debug mode for beta releases
 - 1.1beta5

2012-01-18:
 - Parser fix for "unset todo_list[$todo_id]"

2012-01-14:
 - Parser fixes for nested strings
 - Improved support for substitution operators in parameter expansion, e.g. ${var:-value if var is null}
 - The bash library bashinator now parses without syntax errors

2012-01-12:
 - Parsing performance improved
 - Indexing of variable definitions, function definitions, script includes, reverse script includes and file names

2012-01-07:
 - Fixed parsing of ${@} and ${?}
 - Fixed unevaluated strings in a subshell
 - Error message for postfix / prefix operators on variable values in arithmetic expressions, e.g. $(( ${x}++ ))
 - Version 1.1beta3

2012-01-06:
 - Basic support for regular expressions in conditional command, e.g. [[ a =~ e* ]]
 - Fixed negation in conditional expressions, e.g. [ ! -f "test.txt" ]

2012-01-05:
 - Redirects after include command are supported now

2011-11-29:
 - Version 1.1beta2

2011-11-12:
 - Parser fixes

2011-11-10:
 - Fixed parsing of the semicolon in "case ... esac;"
 - Fixed hidden files in absolute path completion
 - Version 1.1beta1

2011-11-09:
 - Fixed parsing of conditional commands [[ x ]] and test expressions [ x ]
 - Compatibility with IntelliJ 11 EAP

2011-08-12:
 - Fixed Exception in file path completion provider

2011-05-19:
 - Version 1.0

2011-05-17:
 - Fixed compatibility with IntelliJ IDEA 10.5
 - The Bash REPL now uses Enter instead of Ctrl+Enter

2011-05-03:
 - Removed Java options tab from Bash run configuration settings

2011-04-11:
 - Bug: NPE occurred when editing files which are not part of the current project
 - Version 0.9.23

2011-04-01: